--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                         <img src="https://www.havmor.com/themes/havmornew/images/home-bg-img.webp" alt="Background Image" class="img-fluid w-100 h-100 cow_img_change" style="object-fit: cover;">
                     </div>
                     <!-- Carousel Content -->
-                    <div class="position-relative h-100 d-lg-none d-md-none pt-5 mt-5">
+                    <div class="position-relative h-100 cow_img_carosel d-lg-none d-md-none ">
                         <div id="homeProductInfoCarousel" class="carousel slide w-100" data-bs-ride="carousel">
                             <div class="carousel-indicators">
                                 <button type="button" data-bs-target="#homeProductInfoCarousel" data-bs-slide-to="0" class="active"></button>
@@ -360,14 +360,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#homeProductInfoCarousel" data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#homeProductInfoCarousel" data-bs-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Next</span>
-                            </button>
+                            
                         </div>
                     </div>
                     <!-- Content (Visible on md lg and above screens) -->
