--- a/index.html
+++ b/index.html
@@ -321,10 +321,10 @@
         
         <div id="knowusbetter" class="knowusbette position-relative" style="height: 100vh;">
             <div class="container-fluid p-0 h-100">
-                <section class="homeProductInfoSec h-100 position-relative">
+                <section class="homeProductInfoSec position-relative">
                     <!-- Background Image -->
                     <div class="position-absolute top-0 start-0 w-100 h-100">
-                        <img src="https://www.havmor.com/themes/havmornew/images/home-bg-img.webp" alt="Background Image" class="img-fluid w-100 h-100 cow_img_change" style="object-fit: cover;">
+                        <img src="https://www.havmor.com/themes/havmornew/images/home-bg-img.webp" alt="Background Image" class="img-fluid w-100 cow_img_change" style="object-fit: cover;">
                     </div>
                     <!-- Carousel Content -->
                     <div class="position-relative h-100 cow_img_carosel d-lg-none d-md-none ">
